--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls codecov
 
-scripts:
+script:
   - pytest --cov-report term missing --cov=app
 
 after-success:
