--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coveralls codecov
 
 script:
-  - pytest --cov-report term missing --cov=app
+  - pytest --cov-report term missing --cov=app/tests
 
 after-success:
   - coveralls
