--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - pip install coveralls codecov
 
 script:
-  - pytest
+  # - pytest --with-coverage
+  py.test --cov=app tests/
 
 after-success:
   - coveralls
