--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: python
 python:
-  - 3.6
+  - "3.6"
 
 install:
   - pip install -r requirements.txt
   - pip install coveralls codecov
 
 script:
-  # - pytest --with-coverage
-  pytest --with-coverage app/tests
+  - py.test --cov-report term-missing --cov app
 
 after-success:
   - coveralls
