--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,13 @@ aniso8601==4.0.1
 astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
-autopep8==1.4.3
-certifi==2018.11.29
-chardet==3.0.4
+autoenv==1.0.0
 Click==7.0
 coverage==4.5.2
-coveralls==1.5.1
-docopt==0.6.2
 flake8==3.6.0
 Flask==1.0.2
 Flask-RESTful==0.3.6
-idna==2.7
+gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -24,13 +20,13 @@ pluggy==0.8.0
 py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
-pylint==2.2.2
+PyJWT==1.6.4
+pylint==2.2.0
 pytest==4.0.1
 pytest-cov==2.6.0
+python-dotenv==0.9.1
 pytz==2018.7
-requests==2.20.1
 six==1.11.0
 typed-ast==1.1.0
-urllib3==1.24.1
 Werkzeug==0.14.1
 wrapt==1.10.11
