--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ PyJWT==1.6.4
 pylint==2.2.0
 pytest==4.0.1
 pytest-cov==2.6.0
+python-coveralls==2.9.1
 python-dotenv==0.9.1
 pytz==2018.7
 six==1.11.0
