--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==4.5.2
 flake8==3.6.0
 Flask==1.0.2
 Flask-RESTful==0.3.6
+Flask-jwt=0.3.2
 gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==1.1.0
@@ -17,6 +18,7 @@ MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==4.3.0
 pluggy==0.8.0
+pysycopg2-binary=2.7.6
 py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
