add database script to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coveralls codecov
-env:
-  - CODECOV_TOKEN="c81bb5e2-ad59-4b4a-b059-a776bff6394c"
+
 services:
   - postgresql
 addons:
@@ -20,4 +19,4 @@ script:
 
 after-success:
   - coveralls
-  - codecov
+  - codecov --token=COV_TOKEN
